Fix overflow issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -16,6 +16,7 @@ h1, h2 {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  box-sizing: border-box;
 }
 
 .tabs {
